Disabled decimal-to-roman convertion

--- a/roman-to-decimal/index.html
+++ b/roman-to-decimal/index.html
@@ -10,8 +10,8 @@
         <form autocomplete="off" spellcheck="false">
             <input type="radio" name="type" id="roman" checked>
             <label for="type">Roman</label>
-            <input type="radio" name="type" id="decimal">
-            <label for="type">Decimal</label>
+            <input type="radio" name="type" id="decimal" disabled>
+            <label for="type">Decimal (disabled)</label>
             <label class="text-label" for="first-input">Roman:</label>
             <input type="text" name="first-input">
             <label class="text-label" for="second-input">Decimal:</label>
